--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,44 @@
-aiodns==3.0.0
-aiohttp==3.8.4
-aiosignal==1.3.1 ; python_version >= '3.7'
-async-timeout==4.0.2 ; python_version >= '3.6'
-attrs==22.2.0 ; python_version >= '3.6'
-cachetools==5.3.0 ; python_version ~= '3.7'
-cchardet==2.1.7
-certifi==2022.12.7 ; python_version >= '3.6'
-cffi==1.15.1
-charset-normalizer==3.1.0 ; python_full_version >= '3.7.0'
-click==8.1.3 ; python_version >= '3.7'
-cssselect==1.2.0 ; python_version >= '3.7'
-exceptiongroup==1.1.1 ; python_version < '3.11'
-flask==2.2.3
-frozenlist==1.3.3 ; python_version >= '3.7'
-google-api-core[grpc]==2.11.0 ; python_version >= '3.7'
-google-auth==2.17.1 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
-google-cloud-core==2.3.2 ; python_version >= '3.7'
-google-cloud-firestore==2.10.1
-googleapis-common-protos==1.59.0 ; python_version >= '3.7'
-grpcio==1.53.0
-grpcio-status==1.53.0
-idna==3.4 ; python_version >= '3.5'
-importlib-metadata==6.1.0 ; python_version < '3.10'
-iniconfig==2.0.0 ; python_version >= '3.7'
-itsdangerous==2.1.2 ; python_version >= '3.7'
-jinja2==3.1.2 ; python_version >= '3.7'
-lxml==4.9.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-markupsafe==2.1.2 ; python_version >= '3.7'
-multidict==6.0.4 ; python_version >= '3.7'
-packaging==23.0 ; python_version >= '3.7'
-pluggy==1.0.0 ; python_version >= '3.6'
-proto-plus==1.22.2 ; python_version >= '3.6'
-protobuf==4.22.1 ; python_version >= '3.7'
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycares==4.3.0
-pycparser==2.21
-pyquery==2.0.0
-pytest==7.2.2 ; python_version >= '3.7'
-pytest-asyncio==0.21.0
-requests==2.28.2
-rsa==4.9 ; python_version >= '3.6'
-six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-tomli==2.0.1 ; python_version < '3.11'
-urllib3==1.26.15 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
-werkzeug==2.2.3 ; python_version >= '3.7'
-yarl==1.8.2 ; python_version >= '3.7'
-zipp==3.15.0 ; python_version >= '3.7'
+aiodns==3.2.0
+aiohappyeyeballs==2.4.2
+aiohttp==3.10.8
+aiosignal==1.3.1
+attrs==24.2.0
+blinker==1.8.2
+cachetools==5.5.0
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.3.2
+click==8.1.7
+cssselect==1.2.0
+Flask==3.0.3
+frozenlist==1.4.1
+google-api-core==2.20.0
+google-auth==2.35.0
+google-cloud-core==2.4.1
+google-cloud-firestore==2.19.0
+googleapis-common-protos==1.65.0
+grpcio==1.66.2
+grpcio-status==1.66.2
+idna==3.10
+iniconfig==2.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+lxml==5.3.0
+MarkupSafe==2.1.5
+multidict==6.1.0
+packaging==24.1
+pluggy==1.5.0
+proto-plus==1.24.0
+protobuf==5.28.2
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycares==4.4.0
+pycparser==2.22
+pyquery==2.0.1
+pytest==8.3.3
+pytest-asyncio==0.24.0
+requests==2.32.3
+rsa==4.9
+urllib3==2.2.3
+Werkzeug==3.0.4
+yarl==1.13.1
